<?xml version="1.0" encoding="utf-8"?>

<!-- Added Strings: timer, button12, button24, buttonAM, button PM-->
<resources>

    <string name="app_name">Clock</string>
    <string name="timer">12:00:00 AM</string>
    <string name="stopwatchTime">00:00:00</string>
    <string name="realTimer">00:00:00</string>
    <string name="action_settings">Settings</string>
    <string name="button12">12 Hour Mode</string>
    <string name="button24">24 Hour Mode</string>
    <string name="buttonAM">Change to AM</string>
    <string name="buttonPM">Change to PM</string>
    <string name="timerButton">Timer</string>
    <string name="stopwatchButton">Stopwatch</string>
    <string name="zoomButton">Zoom</string>
    <string name="displayOffButton">Display Off</string>
    <string name="stopwatchStartButton">Start</string>
    <string name="stopwatchPauseButton">Pause</string>
    <string name="stopwatchResetButton">Reset</string>
    <string name="stopwatchZoomButton">Zoom</string>
    <string name="stopwatchDisplayOffButton">Display Off</string>
    <string name="startTimerButton">Start</string>
    <string name="pauseTimerButton">Pause</string>
    <string name="resetTimerButton">Reset</string>
    <string name="zoomTimerButton">Zoom</string>
    <string name="displayOffTimerButton">DisplayOff</string>

</resources>
