<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <!-- Textview for displaying stopwatch time -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="90sp"
        android:text="@string/stopwatchTime"
        android:id="@+id/stopwatchTime"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />

    <!-- Button for starting the stopwatch -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/stopwatchStartButton"
        android:id="@+id/startButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:onClick="startClicked"/>

    <!-- Button for pausing the stopwatch -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/stopwatchPauseButton"
        android:id="@+id/pauseButton"
        android:layout_gravity="center_horizontal"
        android:onClick="pauseClicked"/>

    <!-- Button for resetting the stopwatch -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/stopwatchResetButton"
        android:id="@+id/resetButton"
        android:layout_gravity="center_horizontal"
        android:onClick="resetClicked"/>

</LinearLayout>
