<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation = "vertical"
    tools:context="com.example.clock.MainActivity">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup">
        <RadioButton android:id="@+id/radio_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button12"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button24"
            android:onClick="onRadioButtonClicked"/>


    </RadioGroup>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup2">

        <RadioButton android:id="@+id/radio_PM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPM"
            android:onClick="onRadioButtonClicked2"
            android:layout_gravity="right"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton android:id="@+id/radio_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAM"
            android:onClick="onRadioButtonClicked2"
            android:layout_gravity="right"
            android:layout_below="@+id/radio_PM"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RadioGroup>


    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerMin"
        android:layout_alignTop="@+id/numberPickerSec"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerHour"
        android:layout_alignTop="@+id/numberPickerMin"></NumberPicker>
    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerSec"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id = "@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/timer"
        android:gravity="center"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/numberPickerMin"
        android:layout_centerHorizontal="true"></TextView>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/syncButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:src="@mipmap/ic_syncbutton"
        android:onClick="onSyncButtonClicked" />


</RelativeLayout>
