<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation = "vertical"
    tools:context="com.example.clock.timerActivity" >

    <!-- Textview for displaying timer time -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/realTimer"
        android:id="@+id/realTimer"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <!-- Button for starting the timer -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/startTimerButton"
        android:id="@+id/startTimerButton"
        android:layout_below="@+id/realTimer"
        android:layout_toLeftOf="@+id/pauseTimerButton"
        android:layout_marginTop="25dp"
        android:onClick="startTimerClicked"/>

    <!-- Button for pausing the timer -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/pauseTimerButton"
        android:id="@+id/pauseTimerButton"
        android:layout_below="@+id/realTimer"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="pauseTimerClicked"/>

    <!-- Button for resetting the timer -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/resetTimerButton"
        android:id="@+id/resetTimerButton"
        android:layout_below="@+id/realTimer"
        android:layout_toRightOf="@+id/pauseTimerButton"
        android:layout_marginTop="25dp"
        android:onClick="resetTimerClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Zoom"
        android:id="@+id/zoomTimerButton"
        android:layout_below="@+id/startTimerButton"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:onClick="zoomText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Display Off"
        android:id="@+id/displayTimerButton"
        android:layout_below="@+id/resetTimerButton"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:onClick="startDisplayOffActivity"/>

    <!-- Number Picker for setting minutes -->
    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerTimerMin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <!-- Number Picker for setting hours -->
    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerTimerHour"
        android:layout_alignTop="@+id/numberPickerTimerMin"
        />

    <!-- Number Picker for setting seconds -->
    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPickerTimerSec"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
